# sdkwork-web-framework

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODEX.md  Cargo.toml  GEMINI.md  README.md  package.json  sdkwork.workflow.json
crates/sdkwork-router-web-framework-backend-api/: Cargo.toml
crates/sdkwork-router-web-framework-backend-api/src/: lib.rs  manifest.rs  paths.rs  persistence.rs  response.rs  routes.rs
crates/sdkwork-router-web-framework-backend-api/src/services/: admin_service.rs  validation.rs
crates/sdkwork-router-web-framework-backend-api/tests/: admin_api.rs  openapi_authority.rs  routes_contract.rs
crates/sdkwork-routes-web-framework-backend-api/: Cargo.toml
crates/sdkwork-routes-web-framework-backend-api/src/: dto.rs  handlers.rs  lib.rs  paths.rs  response.rs  state.rs  tenant_scope.rs
crates/sdkwork-routes-web-framework-backend-api/src/services/: admin_service.rs  mod.rs  validation.rs
crates/sdkwork-routes-web-framework-backend-api/tests/: admin_api.rs  openapi_authority.rs  routes_contract.rs
crates/sdkwork-web-admin-server/: Cargo.toml
crates/sdkwork-web-admin-server/src/: lib.rs  main.rs
crates/sdkwork-web-axum/: Cargo.toml
crates/sdkwork-web-axum/src/: correlation.rs  extractors.rs  lib.rs  middleware.rs  timeout.rs  websocket.rs
crates/sdkwork-web-axum/tests/: integration.rs
crates/sdkwork-web-bootstrap/: Cargo.toml
crates/sdkwork-web-bootstrap/src/: admin_api.rs  env_config.rs  fallback.rs  framework.rs  health.rs  lib.rs  lifecycle.rs  observability.rs  openapi.rs  otel.rs  redis_readiness.rs  redis_stores.rs  router.rs  serve.rs  sqlx_readiness.rs  sqlx_stores.rs  tracing_init.rs
crates/sdkwork-web-bootstrap/tests/: admin_api_readiness.rs  integration.rs  sqlx_integration.rs
crates/sdkwork-web-contract/: Cargo.toml
crates/sdkwork-web-contract/src/: lib.rs  openapi.rs
crates/sdkwork-web-core/: Cargo.toml
crates/sdkwork-web-core/src/: api_chain.rs  axum_integration.rs  client_context_guard.rs  client_kind.rs  constants.rs  context_injection.rs  cors_policy.rs  error.rs  exports.rs  extractors.rs  hashing.rs  idempotency.rs  interceptors.rs  jwt.rs  jwt_claims.rs  jwt_fixtures.rs  jwt_tenant.rs  lib.rs  metrics.rs  open_api_auth.rs  parsers.rs  path_resource_guard.rs  pipeline_contract_tests.rs  policies.rs  policy_cache.rs  problem.rs  production_assembly.rs  rate_limit.rs  rate_limit_policy.rs  redact.rs  request_context.rs  request_identity.rs  resolvers.rs  route_manifest.rs  runtime_options.rs  security.rs  stores.rs  surface.rs  surface_bridge.rs  tenant_app_context.rs  (+6 more)
crates/sdkwork-web-core/target-alt/: .rustc_info.json
crates/sdkwork-web-core/target-alt/debug/.fingerprint/async-trait-7d1c4cea1c654ac3/: lib-async_trait  lib-async_trait.json
crates/sdkwork-web-core/target-alt/debug/.fingerprint/atomic-waker-0cc2f644b7474aaa/: lib-atomic_waker  lib-atomic_waker.json
crates/sdkwork-web-core/target-alt/debug/.fingerprint/autocfg-bf81d61da93d3164/: lib-autocfg  lib-autocfg.json
crates/sdkwork-web-core/target-alt/debug/.fingerprint/axum-c63016185c5091c1/: lib-axum  lib-axum.json
crates/sdkwork-web-core/target-alt/debug/.fingerprint/axum-core-689fb22776c43a27/: lib-axum_core  lib-axum_core.json
crates/sdkwork-web-core/target-alt/debug/.fingerprint/base64-01063cccf8caaaf8/: lib-base64  lib-base64.json
crates/sdkwork-web-core/target-alt/debug/.fingerprint/base64ct-3d6d636414a1feee/: lib-base64ct  lib-base64ct.json
crates/sdkwork-web-core/target-alt/debug/.fingerprint/block-buffer-74aba399fc410183/: lib-block_buffer  lib-block_buffer.json
crates/sdkwork-web-core/target-alt/debug/.fingerprint/bytes-1c230b8faab3b317/: lib-bytes  lib-bytes.json
crates/sdkwork-web-core/target-alt/debug/.fingerprint/cfg-if-4316c8dd3aae8aa0/: lib-cfg_if  lib-cfg_if.json
crates/sdkwork-web-core/target-alt/debug/.fingerprint/const-oid-61ce1419a1b2bf73/: lib-const_oid  lib-const_oid.json
crates/sdkwork-web-core/target-alt/debug/.fingerprint/cpufeatures-e9f6add8b507f973/: lib-cpufeatures  (+1 more)
crates/sdkwork-web-framework-admin-repository-sqlx/: Cargo.toml
crates/sdkwork-web-framework-admin-repository-sqlx/src/: error.rs  lib.rs  models.rs  repository.rs
crates/sdkwork-web-framework-gateway-assembly/: Cargo.toml  assembly-manifest.json
crates/sdkwork-web-framework-gateway-assembly/src/: bootstrap.rs  generated.rs  lib.rs
crates/sdkwork-web-schema-registry/: Cargo.toml
crates/sdkwork-web-schema-registry/src/: composer.rs  error.rs  frontend.rs  lib.rs  main.rs  types.rs
crates/sdkwork-web-store-redis/: Cargo.toml
crates/sdkwork-web-store-redis/src/: lib.rs
crates/sdkwork-web-store-redis/tests/: redis_live.rs
crates/sdkwork-web-store-sqlx/: Cargo.toml
crates/sdkwork-web-store-sqlx/migrations/: 001_web_stores.sql  002_web_rate_limit_bucket.sql  003_web_audit_event.sql  004_web_cors_policy.sql  005_web_rate_limit_policy.sql  006_web_tenant_runtime_profile.sql  007_web_control_node.sql  008_tenant_concurrent_limit.sql  009_web_audit_outcome.sql  010_web_security_event_tenant_id.sql  011_web_idempotency_tenant_id.sql  012_web_rate_limit_tenant_id.sql  013_web_event_expires_at.sql  014_web_policy_version.sql  DEPRECATED.md
crates/sdkwork-web-store-sqlx/src/: audit.rs  bootstrap.rs  cors_policy.rs  idempotency.rs  lib.rs  pool.rs  purge.rs  rate_limit.rs  rate_limit_policy.rs  security_events.rs  tenant_runtime.rs
crates/sdkwork-web-test-utils/: Cargo.toml
crates/sdkwork-web-test-utils/src/: deployment_env.rs  jwt.rs  lib.rs
crates/sdkwork-webstore-database-host/: Cargo.toml
crates/sdkwork-webstore-database-host/src/: lib.rs
tests/architecture/: Cargo.toml
tests/architecture/tests/: bootstrap_contract_fallback.rs  capability_matrix.rs  commercial_ga_readiness.rs  component_spec.rs  dependency_graph.rs  handler_static_rules.rs  header_fuzz.rs  java_parity.rs  openapi_context_selectors.rs  pipeline_benchmark.rs  pipeline_stress.rs  problem_catalog.rs  problem_correlation_rules.rs  problem_snapshot.rs  security_vectors.rs  service_static_rules.rs  sqlx_migrations.rs  ws_security_vectors.rs
(+376 files in other folders)
