[package]
name = "sdkwork-router-web-framework-backend-api"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Platform backend-api for web framework runtime governance (web_* config, control nodes)."

[lib]
name = "sdkwork_router_web_framework_backend_api"
path = "src/lib.rs"

[dependencies]
axum.workspace = true
http.workspace = true
serde.workspace = true
serde_json.workspace = true
sdkwork-web-core.workspace = true
sdkwork-web-contract.workspace = true
sdkwork-web-framework-admin-repository-sqlx = { path = "../sdkwork-web-framework-admin-repository-sqlx" }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
tokio.workspace = true
tower.workspace = true
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
sdkwork-web-store-sqlx = { workspace = true }
sdkwork-web-axum = { workspace = true }
sdkwork-web-test-utils = { workspace = true }
serde_json.workspace = true
