[package]
name = "sdkwork-web-framework-gateway-assembly"
edition.workspace = true
license.workspace = true
version.workspace = true
description = "Generated gateway assembly for sdkwork-web-framework application HTTP plane."

[lib]
name = "sdkwork_web_framework_gateway_assembly"
path = "src/lib.rs"

[dependencies]
axum.workspace = true
tokio = { version = "1.48", features = ["macros", "rt-multi-thread"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
sdkwork_routes_web_framework_backend_api = { package = "sdkwork-routes-web-framework-backend-api", path = "../sdkwork-routes-web-framework-backend-api" }
