[package]
name = "sdkwork-web-store-sqlx"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "SQLx-backed RateLimitStore, IdempotencyStore, and SecurityEventEmitter (web_* tables only). Supports SQLite and PostgreSQL."

[lib]
name = "sdkwork_web_store_sqlx"
path = "src/lib.rs"

[dependencies]
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
sdkwork-database-config.workspace = true
sdkwork-database-sqlx.workspace = true
sdkwork-web-core.workspace = true
sdkwork-webstore-database-host = { path = "../sdkwork-webstore-database-host" }
tokio.workspace = true
tracing.workspace = true

[features]
default = ["sqlite"]
sqlite = ["sqlx/sqlite"]
postgres = ["sqlx/postgres"]

[dev-dependencies]
tokio.workspace = true
