[package]
name = "sdkwork-webstore-database-host"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "SDKWork Web Store database lifecycle bootstrap."

[lib]
name = "sdkwork_webstore_database_host"
path = "src/lib.rs"

[dependencies]
dotenvy = "0.15"
sdkwork_database_config = { workspace = true }
sdkwork_database_lifecycle = { workspace = true }
sdkwork_database_spi = { workspace = true }
sdkwork_database_sqlx = { workspace = true }
